# zjet_corrections

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
app/: README.md  run_controller.py  streamlit_app.py
notebooks/: mass_diagnostic_ntuple_plots.ipynb  run_analysis.ipynb  zjet_purity_stability_diagnostic.ipynb
samples_mc/: ST_t-channel_antitop_4f_InclusiveDecays_UL17NanoAODv9.txt  herwig7_UL16NanoAODAPVv9_inclusive.txt  herwig7_UL17NanoAODv9_inclusive.txt  inclusive_UL16NanoAODv9.txt  powheg_UL18NanoAODv9_inclusive.txt  pythia_UL17NanoAODv9.txt  pythia_UL18NanoAODv9.txt  st_tW_antitop_UL16NanoAODAPVv9.txt  st_tW_antitop_UL18NanoAODv9.txt  st_tW_top_UL16NanoAODAPVv9.txt  st_tW_top_UL16NanoAODv9.txt
samples_mc/backgrounds/: ttjetsUL16NanoAODAPVv9.txt  wwUL16NanoAODAPVv9.txt  wwUL18NanoAODv9.txt  wzUL16NanoAODAPVv9.txt  zzUL16NanoAODv9.txt  zzUL17NanoAODv9.txt
scripts/: run_analysis_cli.py
src/zjet_corrections/: cms_utils.py  corrections.py  hep_plot.py  hist_utils.py  notebook_utils.py  plot_utils.py  pu_loader.py  roccor.py  smp_utils.py  weight_class.py  zjet_minimal_processor.py  zjet_processor.py  zjet_processor_mass.py  zjet_processor_muon.py
tests/: .analysis_widget_config.json  Untitled.ipynb  hist_plotter.ipynb  integrate_rebin.py  random.ipynb  samples.txt  samples_mc  simple2.ipynb  simple3.ipynb  test-Copy1.ipynb  test.ipynb  test.py  test_cleaned.ipynb  test_mass_diagnostics.py  test_muon.ipynb
tests/samples/: EGamma_UL2018.txt  SingleElectron_UL2016.txt  SingleMuon_UL2017.txt
tests/samples_mc/: herwig7_UL16NanoAODv9_inclusive.txt  (+12 more)
(+21 files in other folders)
